[tool.poetry]
name = "test-db-bot"
version = "1"
description = ""
authors = ["netatlin <ruslanura@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
pyTelegramBotAPI = "^4.4.0"
DateTime = "^4.4"
python-dotenv = "^0.19.2"
alembic = "^1.7.6"
SQLAlchemy = "^1.4.31"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
